# Choco-matic

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: CMakeLists.txt  MotorControl.h
include/: MotorControl.h  SpeedControl.h  speed_control.h
src/: ButtonEvents.cpp  CMakeLists.txt  MotorControl.cpp  SpeedControl.cpp  main.c  main.cpp  speed_control.c
